@@ -1,3 +1,7 @@
+internal
+    - bugfix for connection search uninitilized variable fixed
+
+
 0.8.1.j
     - simta unique PIDs
     - RBL logging cleaned up
